# bro

./: .env.sample  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  response.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
frontend/: .eslintrc.js  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: Dashboard.tsx  HistoricalChart.tsx  HistoryPanel.tsx  PredictionChart.css  PredictionChart.tsx  PredictionTable.tsx  StockCard.css  StockCard.tsx  StockQuoteDisplay.css  StockQuoteDisplay.tsx  VisualizationComponent.tsx
frontend/src/utils/: predictionHelpers.ts
results/: AAPL_Close_predictions_20250510_225856.csv  AAPL_RSI_analysis_20250510_225932.csv  AMZN_RSI_analysis_20250510_234339.csv  META_Close_forecast_20250509_010314.csv  META_Close_forecast_20250509_010332.csv  SPY_Close_predictions_20250511_071538.csv
src/: main.py
src/agents/quant/: agent.py  client.py
src/analysis/deep_learning/: lstm.py
src/analysis/machine_learning/: classification_prediction.py
src/analysis/probabilistic/: arima.py  hmm.py  kalman_filter.py
src/analysis/time_series/: fbprophet.py
src/analysis/volatility/: garch.py  rsi_measure.py  xgboost_volatility.py
src/ingestion/clients/: __init__.py  yahoo.py
src/mcp/: main.py  mount.py  routes.py  server.py
src/mcp/tools/: deep_learning_tools.py  probabilistic_tools.py  (+4 more)
src/utils/: __init__.py  settings.py
