[tool.poetry]
name = "bro"
version = "0.1.0"
description = "Financial bro assistant"
authors = ["Miguel Cárdenas <miguelecsx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"
pandas = "^2.2.3"
pydantic-settings = "^2.9.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
